--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
             <div class="menu">
                 <ul>
                     <li>
-                        <a href="#">Dashboard</a>
+                        <a href="#">Controle Financeiro</a>
                     </li>
                     <li>
                         <a href="#">Perfil</a>
