--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,7 @@
                 <a href="../login.html"><i class="fas fa-right-from-bracket"></i> sair</a>
             </header>
             <div class="main-content">
-                <p>dhgsdjh</p>
+                <p>Controle Financeiro</p>
             </div>
         </main>
     </div>
